# llm-gateway

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml  providers.yaml  routing.yaml
src/: __init__.py  main.py
src/api/: dependencies.py  models.py  routes.py
src/core/: config.py  exceptions.py
src/cost/: calculator.py  pricing.py  tracker.py
src/mcp/: __init__.py  routes.py  server.py  transport.py
src/middleware/: auth.py  cache.py  logging_mw.py  metrics.py  rate_limit.py
src/providers/: __init__.py  anthropic_provider.py  azure_provider.py  base.py  bedrock_provider.py  ollama_provider.py  openai_provider.py  registry.py  vertex_provider.py
src/routing/: __init__.py  cost_router.py  fallback.py  load_balancer.py  router.py
tests/: conftest.py  test_api.py  test_mcp.py
tests/test_middleware/: test_auth.py  test_cache.py
tests/test_providers/: test_registry.py
tests/test_routing/: test_cost_router.py  test_router.py
